--- a/uebergangsbestimmungen.core.tex
+++ b/uebergangsbestimmungen.core.tex
@@ -1,3 +1,6 @@
+\begin{contract}
+\setcounter{Paragraph}{0}
+
 
 \Paragraph{title={Dauer der ersten Amtsperiode}}\label{amtsperiode}
 
@@ -42,5 +45,6 @@ Die Vorsitzende eines Organs teilt dem Vorstand den Zeitpunkt der Konstituierung
 \Paragraph{title={Erlass weiterer Satzungen}}
 Das Studierendenparlament soll unverzüglich nach seiner Konstituierung spätestens aber bis zum 31.12.2013 eine Finanzordnung und eine Beitragsordnung erlassen.
 
-Die Fachschaften sollen unverzüglich nach Konstituierung des Fachschaftsvorstands spätestens aber bis zum 31.12.2013 eine Fachschaftsordnung erlassen. 
+Die Fachschaften sollen unverzüglich nach Konstituierung des Fachschaftsvorstands spätestens aber bis zum 31.12.2013 eine Fachschaftsordnung erlassen.
 
+\end{contract}
