--- a/vs-satzung.core.tex
+++ b/vs-satzung.core.tex
@@ -1,8 +1,10 @@
-
-
 %
 % STUDIERENDENSCHAFT
 %
+
+\begin{contract}
+\setcounter{Paragraph}{0}
+
 
 \parnumberfalse \section{Studierendenschaft} \parnumbertrue
 
@@ -573,3 +575,5 @@ Als Anzahl der abgegebenen Stimmen gilt die Summe aus Ja-Stimmen, Nein-Stimmen, 
 \Paragraph{title=In-Kraft-Treten}\label{grundsaetze:inkrafttreten}
 \parnumberfalse Diese Satzung tritt am Tage nach ihrer Bekanntmachung in den Amtlichen Bekanntmachungen des KIT in Kraft.\parnumbertrue
 
+
+\end{contract}
