--- a/wahl-abstimmungsordnung.core.tex
+++ b/wahl-abstimmungsordnung.core.tex
@@ -1,3 +1,6 @@
+\begin{contract}
+\setcounter{Paragraph}{0}
+
 \Paragraph{title={Geltungsbereich}}\label{wahl:geltungsbereich}
 \parnumberfalse Diese Satzung regelt die Wahlen zum Studierendenparlament und den Fachschaftsvorständen, die Urabstimmung, sowie die Wahlen zu weiteren Organen der Studierendenschaft, sofern eine Satzung dies vorsieht. \parnumbertrue
 
@@ -373,3 +376,5 @@ Bei der Berechnung der Fristen werden nur Tage gezählt, die in der vom KIT-Sena
 
 Fällt der letzte Tag einer Frist auf einen vorlesungsfreien Tag, so tritt an dessen Stelle der vorherige Vorlesungstag .
 
+
+\end{contract}
