Hierarchie im Inhaltsverzeichnis korrigiert

--- a/uebergangsbestimmungen.core.tex
+++ b/uebergangsbestimmungen.core.tex
@@ -1,5 +1,6 @@
 \begin{contract}
 \setcounter{Paragraph}{0}
+\setcounter{juratoclevel}{0}
 
 
 \Paragraph{title={Dauer der ersten Amtsperiode}}\label{amtsperiode}
