--- a/vs-satzung.core.tex
+++ b/vs-satzung.core.tex
@@ -4,6 +4,7 @@
 
 \begin{contract}
 \setcounter{Paragraph}{0}
+\setcounter{juratoclevel}{1}
 
 
 \parnumberfalse \section{Studierendenschaft} \parnumbertrue
