--- a/gesamt.tex
+++ b/gesamt.tex
@@ -17,7 +17,7 @@
 % sonst werden auch einzelne Absätze nummeriert. Falls nicht vorhanden unter
 % http://mirrors.ctan.org/install/macros/latex/contrib/koma-script.tds.zip
 % runterladen und in ~/texmf/ entpacken (evtl. noch "texhash ~/texmf/" ausführen)
-\usepackage[juratotoc,ref=parlong,ref=nosentence]{scrjura}[2013/11/04]
+\usepackage[juratotoc,juratocindent=0pt,ref=parlong,ref=nosentence]{scrjura}[2013/11/04]
 
 %\usepackage{tocstyle}
 %\usetocstyle{KOMAlike}
