--- a/wahl-abstimmungsordnung.core.tex
+++ b/wahl-abstimmungsordnung.core.tex
@@ -1,5 +1,6 @@
 \begin{contract}
 \setcounter{Paragraph}{0}
+\setcounter{juratoclevel}{0}
 
 \Paragraph{title={Geltungsbereich}}\label{wahl:geltungsbereich}
 \parnumberfalse Diese Satzung regelt die Wahlen zum Studierendenparlament und den Fachschaftsvorständen, die Urabstimmung, sowie die Wahlen zu weiteren Organen der Studierendenschaft, sofern eine Satzung dies vorsieht. \parnumbertrue
