Überflüssige Absatznummerierungs-Unterdrückung entfernt
Geht ab scrjura 0.7 alles auch fehlerfrei automatisch

--- a/uebergangsbestimmungen.core.tex
+++ b/uebergangsbestimmungen.core.tex
@@ -12,7 +12,7 @@ Die Amtsperiode der ersten Fachschaftsvorstände beginnt am Tag nach der Festste
 
 \Paragraph{title={Anzahl der Fachschaftssprecherinnen}}\label{fachschaftssprecher}
 
-\parnumberfalse Bis zum in Kraft treten der Fachschaftsordnung entspricht die Anzahl der Fachschaftssprecherinnen der Anzahl der studentischen Mitglieder des Fakultätsrats gemäß §~9 Absatz~5 Nummer~2 der Gemeinsamen Satzung des KIT vom 21.~März~2011 i.V.m. §~9 Absatz~2 Nummer~2 der Grundordnung der ehemaligen Universität Fridericiana zu Karlsruhe (TH) in der Fassung vom 22. Dezember 2008. \parnumbertrue
+Bis zum in Kraft treten der Fachschaftsordnung entspricht die Anzahl der Fachschaftssprecherinnen der Anzahl der studentischen Mitglieder des Fakultätsrats gemäß §~9 Absatz~5 Nummer~2 der Gemeinsamen Satzung des KIT vom 21.~März~2011 i.V.m. §~9 Absatz~2 Nummer~2 der Grundordnung der ehemaligen Universität Fridericiana zu Karlsruhe (TH) in der Fassung vom 22. Dezember 2008.
 
 
 \Paragraph{title={Für die erste Besetzung der Organe erforderliche Wahlen}}\label{wahlen}
