--- a/vs-satzung.core.tex
+++ b/vs-satzung.core.tex
@@ -6,15 +6,14 @@
 \setcounter{Paragraph}{0}
 \setcounter{juratoclevel}{1}
 
-
-\parnumberfalse \section{Studierendenschaft} \parnumbertrue
-
+\chapter{Studierendenschaft}
 \Paragraph{title=Studierendenschaft}
-\parnumberfalse Die immatrikulierten Studierenden einschließlich der immatrikulierten Doktorandinnen des Karlsruher Instituts für Technologie (KIT) (Mitglieder) bilden gemäß § 65 Absatz 1 LHG die Studierendenschaft. Sie ist eine rechtsfähige Körperschaft des öffentlichen Rechts und als solche eine Gliedkörperschaft des KIT. Die Studierendenschaft arbeitet auf demokratischer Grundlage und wahrt nach den verfassungsrechtlichen Grundsätzen die weltanschauliche, religiöse und parteipolitische Neutralität.\parnumbertrue
+Die immatrikulierten Studierenden einschließlich der immatrikulierten Doktorandinnen des Karlsruher Instituts für Technologie (KIT) (Mitglieder) bilden gemäß § 65 Absatz 1 LHG die Studierendenschaft. Sie ist eine rechtsfähige Körperschaft des öffentlichen Rechts und als solche eine Gliedkörperschaft des KIT. Die Studierendenschaft arbeitet auf demokratischer Grundlage und wahrt nach den verfassungsrechtlichen Grundsätzen die weltanschauliche, religiöse und parteipolitische Neutralität.
+
 
 \Paragraph{ title = Aufgaben}\label{studierendenschaft:aufgaben}
 
-\parnumberfalse Die Studierendenschaft verwaltet ihre Angelegenheiten im Rahmen der gesetzlichen Bestimmungen selbst. Sie hat unbeschadet der Zuständigkeit der Hochschule und des Studentenwerks die folgenden Aufgaben
+Die Studierendenschaft verwaltet ihre Angelegenheiten im Rahmen der gesetzlichen Bestimmungen selbst. Sie hat unbeschadet der Zuständigkeit der Hochschule und des Studentenwerks die folgenden Aufgaben
 \begin{enumerate}
 \item die Wahrnehmung der hochschulpolitischen, fachlichen und fachübergreifenden sowie der sozialen, wirtschaftlichen und kulturellen Belange der Studierenden,
 \item die Mitwirkung an den Aufgaben des KIT nach §§~2~bis~7~LHG i.~V.~m. §~20~KITG,
@@ -22,7 +21,7 @@
 \item die Förderung der Gleichstellung und den Abbau von Benachteiligungen innerhalb der Studierendenschaft,
 \item die Förderung der sportlichen und musischen Aktivitäten der Studierenden,
 \item die Pflege und der Ausbau der überregionalen und internationalen Studierendenbeziehungen.
-\end{enumerate}\parnumbertrue
+\end{enumerate}
 
 \Paragraph{title={Rechte und Pflichten der Mitglieder}}\label{studierendenschaft:mitglieder}
 
@@ -57,21 +56,21 @@ Die Organe der Studierendenschaft tagen grundsätzlich öffentlich. Die Geschäf
 % URABSTIMMUNG
 %
 
-\parnumberfalse \section{Urabstimmung}\label{urabstimmung} \parnumbertrue
+\chapter{Urabstimmung}\label{urabstimmung}
 
 \Paragraph{title=Aufgaben}
-\parnumberfalse Die Urabstimmung entscheidet über grundlegende Fragen der Studierendenschaft. Sie kann über die Auflösung des Studierendenparlaments sowie über Änderungen der Organisationssatzung entscheiden.\parnumbertrue
+Die Urabstimmung entscheidet über grundlegende Fragen der Studierendenschaft. Sie kann über die Auflösung des Studierendenparlaments sowie über Änderungen der Organisationssatzung entscheiden.
 
 \Paragraph{title=Stimmrecht}
-\parnumberfalse Jedes Mitglied ist bei der Urabstimmung stimmberechtigt.\parnumbertrue
+Jedes Mitglied ist bei der Urabstimmung stimmberechtigt.
 
 \Paragraph{title=Zustandekommen}\label{urabstimmung:zustandekommen}
-\parnumberfalse Die Urabstimmung findet statt
+Die Urabstimmung findet statt
 \begin{enumerate}
 \item auf Beschluss des Studierendenparlaments,
 \item auf Beschluss der Fachschaftenkonferenz mit mehr als der Hälfte der satzungsgemäß existierenden Stimmen, \label{urabstimmung:zustandekommen:fsk}
 \item auf Antrag der Mitglieder; zu diesem Zweck muss ein entsprechender Antrag von mindestens 5~\% der Mitglieder unterzeichnet sein; der Antrag ist schriftlich beim Ältestenrat einzureichen; dieser beantragt nach Überprüfung der Voraussetzungen unverzüglich eine Sitzung des Studierendenparlaments zur Wahl des Wahlausschusses. \label{urabstimmung:zustandekommen:mitglieder}
-\end{enumerate} \parnumbertrue
+\end{enumerate}
 
 \Paragraph{title=Organisation und Ablauf}\label{urabstimmung:orga}
 
@@ -92,7 +91,7 @@ Beschlüsse der Urabstimmung heben widersprechende Beschlüsse der Vollversammlu
 % VOLLVERSAMMLUNG
 %
 
-\parnumberfalse \section{Vollversammlung} \parnumbertrue
+\chapter{Vollversammlung}
 
 \Paragraph{title=Aufgaben}
 
@@ -102,16 +101,16 @@ Die Vollversammlung kann nicht über Änderungen der Organisationssatzung sowie 
 
 \Paragraph{title=Stimm- und Antragsrecht}
 
-\parnumberfalse Jedes Mitglied ist auf der Vollversammlung stimm- und antragsberechtigt.\parnumbertrue
+Jedes Mitglied ist auf der Vollversammlung stimm- und antragsberechtigt.
 
 \Paragraph{title=Zustandekommen} \label{vv:zustandekommen}
 
-\parnumberfalse Eine Vollversammlung findet statt
+Eine Vollversammlung findet statt
 \begin{enumerate}
 \item auf Beschluss des Studierendenparlaments,
 \item auf Beschluss der Fachschaftenkonferenz mit mehr als der Hälfte der satzungsgemäß existierenden Stimmen,
 \item \label{vv:zustandekommen:mitglieder}auf Antrag der Mitglieder; zu diesem Zweck muss ein entsprechender Antrag von mindestens 2~\% der Mitglieder unterzeichnet sein; der Antrag ist schriftlich beim Ältestenrat einzureichen.
-\end{enumerate} \parnumbertrue
+\end{enumerate}
 
 
 \Paragraph{title=Organisation und Ablauf}\label{vv:organisation}
@@ -145,7 +144,7 @@ Beschlüsse der Vollversammlung sind ausgesetzt, sobald eine Urabstimmung dazu b
 % STUDIERENDENPARLAMENT
 %
 
-\parnumberfalse \section{Studierendenparlament} \parnumbertrue
+\chapter{Studierendenparlament}
 
 \Paragraph{title=Aufgaben}
 Das Studierendenparlament ist das beschließende Organ der Studierendenschaft; es ist das legislative Organ gemäß §~65~a Absatz~3 Satz~2~LHG.
@@ -228,7 +227,7 @@ Das Studierendenparlament ist beschlussfähig, wenn mehr als die Hälfte der Mit
 % VORSTAND
 %
 
-\parnumberfalse \section{Vorstand} \parnumbertrue
+\chapter{Vorstand}
 
 \Paragraph{title=Aufgaben}
 
@@ -283,10 +282,10 @@ Ist das Chancengleichheitsreferat durch einen Mann besetzt, muss eine Frau zur U
 % ERWEITERTER VORSTAND
 %
 
-\parnumberfalse \section{Erweiterter Vorstand} \parnumbertrue
+\chapter{Erweiterter Vorstand}
 
 \Paragraph{title=Aufgaben}\label{erweitertervorstand:aufgaben}
-\parnumberfalse Der erweiterte Vorstand unterstützt den Vorstand bei seiner Arbeit. Er ist diesem rechenschaftspflichtig.\parnumbertrue
+Der erweiterte Vorstand unterstützt den Vorstand bei seiner Arbeit. Er ist diesem rechenschaftspflichtig.
 
 \Paragraph{title=Wahl} \label{erweitertervorstand:wahl}
 
@@ -306,7 +305,7 @@ Die Mitglieder des erweiterten Vorstands scheiden aus
 % ÄLTESTENRAT
 %
 
-\parnumberfalse \section{Ältestenrat}\label{aera} \parnumbertrue
+\chapter{Ältestenrat}\label{aera}
 
 \Paragraph{title=Aufgaben}\label{aera:aufgaben}
 
@@ -371,11 +370,11 @@ Erhält der Ältestenrat den Antrag auf Wiederanerkennung eines Sitzes im Studie
 % FACHSCHAFTEN
 %
 
-\parnumberfalse \section{Fachschaften} \parnumbertrue
+\chapter{Fachschaften}
 
 \Paragraph{title=Aufgaben} \label{fachschaften:aufgaben}
 
-\parnumberfalse Die Organe der Fachschaft nehmen die fakultätsbezogenen Studienangelegenheiten und Aufgaben im Sinne des \ref{studierendenschaft:aufgaben} auf Fakultätsebene wahr. \parnumbertrue
+Die Organe der Fachschaft nehmen die fakultätsbezogenen Studienangelegenheiten und Aufgaben im Sinne des \ref{studierendenschaft:aufgaben} auf Fakultätsebene wahr.
 
 \Paragraph{title={Gliederung, Mitgliedschaft}}\label{fachschaften:gliederung}
 
@@ -446,7 +445,7 @@ Die Fachschaftsversammlung kann mit 10~\% aller Stimmen und Zweidrittel der abge
 % FACHSCHAFTENKONFERENZ (FSK)
 %
 
-\parnumberfalse \section{Fachschaftenkonferenz}\label{fsk}  \parnumbertrue
+\chapter{Fachschaftenkonferenz}\label{fsk}
 
 \Paragraph{title=Aufgaben} \label{fsk:aufgaben}
 
@@ -498,19 +497,19 @@ Die Fachschaftenkonferenz tagt mindestens einmal pro Vorlesungsmonat.
 % ARBEITSKREISE UND HOCHSCHULGRUPPEN
 %
 
-\parnumberfalse \section{Arbeitskreise und Hochschulgruppen} \parnumbertrue
+\chapter{Arbeitskreise und Hochschulgruppen}
 
 \Paragraph{title=Arbeitskreise}
-\parnumberfalse Zur langfristigen Bearbeitung konkreter Aufgaben oder Teile der Aufgaben nach \ref{studierendenschaft:aufgaben} kann das Studierendenparlament Arbeitskreise der Studierendenschaft einrichten. Diese sind dem Studierendenparlament weisungsgebunden und berichten diesem regelmäßig über ihre Arbeit.\parnumbertrue
+Zur langfristigen Bearbeitung konkreter Aufgaben oder Teile der Aufgaben nach \ref{studierendenschaft:aufgaben} kann das Studierendenparlament Arbeitskreise der Studierendenschaft einrichten. Diese sind dem Studierendenparlament weisungsgebunden und berichten diesem regelmäßig über ihre Arbeit.
 
 \Paragraph{title=Hochschulgruppen}
-\parnumberfalse Studentische Gruppen haben die Möglichkeit, sich als Hochschulgruppe der Studierendenschaft beim Vorstand registrieren zu lassen. Voraussetzung sind eine Vereinbarkeit des Zwecks der Hochschulgruppe mit den Aufgaben der Studierendenschaft, dass der Schwerpunkt der Arbeit der Gruppe am KIT liegt und dass die Gruppe selbstlos tätig ist und nicht in erster Linie eigenwirtschaftliche Zwecke verfolgt. Näheres regelt eine gesonderte Satzung.\parnumbertrue
+Studentische Gruppen haben die Möglichkeit, sich als Hochschulgruppe der Studierendenschaft beim Vorstand registrieren zu lassen. Voraussetzung sind eine Vereinbarkeit des Zwecks der Hochschulgruppe mit den Aufgaben der Studierendenschaft, dass der Schwerpunkt der Arbeit der Gruppe am KIT liegt und dass die Gruppe selbstlos tätig ist und nicht in erster Linie eigenwirtschaftliche Zwecke verfolgt. Näheres regelt eine gesonderte Satzung.
 
 %
 % HAUSHALT
 %
 
-\parnumberfalse \section{Haushalt} \parnumbertrue
+\chapter{Haushalt}
 
 \Paragraph{title=Allgemeines}
 
@@ -549,7 +548,7 @@ Der  Finanzausschuss besteht aus drei durch das Studierendenparlament und  zwei 
 % GRUNDSÄTZE
 %
 
-\parnumberfalse \section{Grundsätze und Organisatorisches} \parnumbertrue
+\chapter{Grundsätze und Organisatorisches}
 
 \Paragraph{title=Wahlen und Abstimmungen}\label{grundsaetze:wahlen}
 
@@ -564,17 +563,17 @@ Jedes Mitglied kann eine Wahl oder Abstimmung beim Ältestenrat innerhalb einer 
 Wahlen und Urabstimmungen finden während der vom KIT-Senat beschlossenen Vorlesungszeit an direkt aufeinander folgenden Werktagen statt.
 
 \Paragraph{title=Mehrheiten}
-\parnumberfalse In der Regel ist ein Antrag angenommen, wenn ihm mehr anwesende Stimmberechtigte zustimmen, als ihn ablehnen (relative Mehrheit). Folgende Abweichungen von dieser Regel können in Satzungen oder Geschäftsordnungen vorgesehen sein:
+In der Regel ist ein Antrag angenommen, wenn ihm mehr anwesende Stimmberechtigte zustimmen, als ihn ablehnen (relative Mehrheit). Folgende Abweichungen von dieser Regel können in Satzungen oder Geschäftsordnungen vorgesehen sein:
 \begin{enumerate}
 \item Absolute Mehrheit, d.\,h. mehr Ja-Stimmen als die Hälfte der Anzahl der Stimmberechtigten,
 \item Zweidrittelmehrheit der abgegebenen Stimmen, d.\,h. mindestens so viele Ja-Stimmen wie zwei Drittel der abgegebenen Stimmen,
 \item Zweidrittelmehrheit der Stimmberechtigten, d.\,h. mindestens so viele Ja-Stimmen wie zwei Drittel der Anzahl der Stimmberechtigten.
 \end{enumerate}
-Als Anzahl der abgegebenen Stimmen gilt die Summe aus Ja-Stimmen, Nein-Stimmen, Enthaltungen und ungültigen Stimmen.\parnumbertrue
+Als Anzahl der abgegebenen Stimmen gilt die Summe aus Ja-Stimmen, Nein-Stimmen, Enthaltungen und ungültigen Stimmen.
 
 
 \Paragraph{title=In-Kraft-Treten}\label{grundsaetze:inkrafttreten}
-\parnumberfalse Diese Satzung tritt am Tage nach ihrer Bekanntmachung in den Amtlichen Bekanntmachungen des KIT in Kraft.\parnumbertrue
+Diese Satzung tritt am Tage nach ihrer Bekanntmachung in den Amtlichen Bekanntmachungen des KIT in Kraft.
 
 
 \end{contract}
