--- a/wahl-abstimmungsordnung.core.tex
+++ b/wahl-abstimmungsordnung.core.tex
@@ -3,7 +3,7 @@
 \setcounter{juratoclevel}{0}
 
 \Paragraph{title={Geltungsbereich}}\label{wahl:geltungsbereich}
-\parnumberfalse Diese Satzung regelt die Wahlen zum Studierendenparlament und den Fachschaftsvorständen, die Urabstimmung, sowie die Wahlen zu weiteren Organen der Studierendenschaft, sofern eine Satzung dies vorsieht. \parnumbertrue
+Diese Satzung regelt die Wahlen zum Studierendenparlament und den Fachschaftsvorständen, die Urabstimmung, sowie die Wahlen zu weiteren Organen der Studierendenschaft, sofern eine Satzung dies vorsieht.
 
 \Paragraph{title={Wahlsystem}}\label{wahl:wahlsystem}
 Das Studierendenparlament wird nach Listen, welche aufgrund gültiger Wahlvorschläge aufgestellt werden, gewählt. 
@@ -240,14 +240,14 @@ Die Auszählung der per Briefwahl abgegebenen Stimmen erfolgt entsprechend der A
 
 \Paragraph{title={Stimmzettel }}\label{wahl:stimmzettel}
 
-\parnumberfalse Der Stimmzettel enthält: 
+Der Stimmzettel enthält: 
 \begin{enumerate}
     \item die zugelassenen Wahlvorschläge mit ihrem Kennwort und den Kandidatinnen mit vollem Namen und Studienfach; bei den Wahlen zu den Fachschaftsvorständen kann auf die Angabe des Studienfachs verzichtet werden.
     \item einen klar zu erkennenden Platz zum Eintragen der Stimmen durch die Wählerinnen,
     \item den Hinweis auf die zur Verfügung stehenden Stimmen sowie den Hinweis auf die Kumulierbarkeit bzw. Panaschierbarkeit der Personenstimmen,
     \item den Hinweis darauf, dass der Stimmzettel vor dem Einwerfen mit dem Aufdruck nach innen zu falten ist,
     \item den Wahlzeitraum.
-\end{enumerate}\parnumbertrue
+\end{enumerate}
 
 \Paragraph{title={Wahlurnen und Urnenbuch}}\label{wahl:urnen}
 Der Wahlausschuss legt vor Beginn der Wahl die Anzahl der Wahlurnen fest, versiegelt die Urnen und kennzeichnet sie eindeutig und deutlich sichtbar.
@@ -370,7 +370,7 @@ Nach der Feststellung gibt der Wahlausschuss das Wahlergebnis bekannt. Die Bekan
 Der Wahlausschuss benachrichtigt mit der Bekanntmachung des Wahlergebnisses die gewählten Kandidatinnen. 
 
 \Paragraph{title={Wahlanfechtung}}\label{wahl:wahlanfechtung}
-\parnumberfalse Jedes Mitglied der Studierendenschaft kann die Wahl nach Maßgabe des \ref{grundsaetze:wahlen:wahlanfechtung} der Organisationssatzung anfechten.\parnumbertrue
+Jedes Mitglied der Studierendenschaft kann die Wahl nach Maßgabe des \ref{grundsaetze:wahlen:wahlanfechtung} der Organisationssatzung anfechten.
 
 \Paragraph{title={Berechnung der Fristen}}\label{wahl:fristen}
 Bei der Berechnung der Fristen werden nur Tage gezählt, die in der vom KIT-Senat beschlossenen Vorlesungszeit liegen.
