Benutze numbers=noenddot statt pointlessnumbers

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,parskip=half,pointlessnumbers,twocolumn]{scrbook}
+\documentclass[a4paper,parskip=half,numbers=noenddot,twocolumn]{scrbook}
 
 %%% rubber: module xelatex
 \usepackage{ifxetex}
