--- a/gesamt.tex
+++ b/gesamt.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper,parskip=half,numbers=noenddot,twocolumn]{scrbook}
 
+\synctex=1
+
 %%% rubber: module xelatex
 \usepackage{ifxetex}
 \ifxetex
