--- a/vs-satzung.core.tex
+++ b/vs-satzung.core.tex
@@ -4,9 +4,8 @@
 
 \begin{contract}
 \setcounter{Paragraph}{0}
-\setcounter{juratoclevel}{1}
 
-\chapter{Studierendenschaft}
+\jursection{Studierendenschaft}
 \Paragraph{title=Studierendenschaft}
 Die immatrikulierten Studierenden einschließlich der immatrikulierten Doktorandinnen des Karlsruher Instituts für Technologie (KIT) (Mitglieder) bilden gemäß § 65 Absatz 1 LHG die Studierendenschaft. Sie ist eine rechtsfähige Körperschaft des öffentlichen Rechts und als solche eine Gliedkörperschaft des KIT. Die Studierendenschaft arbeitet auf demokratischer Grundlage und wahrt nach den verfassungsrechtlichen Grundsätzen die weltanschauliche, religiöse und parteipolitische Neutralität.
 
@@ -56,7 +55,7 @@ Die Organe der Studierendenschaft tagen grundsätzlich öffentlich. Die Geschäf
 % URABSTIMMUNG
 %
 
-\chapter{Urabstimmung}\label{urabstimmung}
+\jursection{Urabstimmung}
 
 \Paragraph{title=Aufgaben}
 Die Urabstimmung entscheidet über grundlegende Fragen der Studierendenschaft. Sie kann über die Auflösung des Studierendenparlaments sowie über Änderungen der Organisationssatzung entscheiden.
@@ -91,7 +90,7 @@ Beschlüsse der Urabstimmung heben widersprechende Beschlüsse der Vollversammlu
 % VOLLVERSAMMLUNG
 %
 
-\chapter{Vollversammlung}
+\jursection{Vollversammlung}
 
 \Paragraph{title=Aufgaben}
 
@@ -144,7 +143,7 @@ Beschlüsse der Vollversammlung sind ausgesetzt, sobald eine Urabstimmung dazu b
 % STUDIERENDENPARLAMENT
 %
 
-\chapter{Studierendenparlament}
+\jursection{Studierendenparlament}
 
 \Paragraph{title=Aufgaben}
 Das Studierendenparlament ist das beschließende Organ der Studierendenschaft; es ist das legislative Organ gemäß §~65~a Absatz~3 Satz~2~LHG.
@@ -227,7 +226,7 @@ Das Studierendenparlament ist beschlussfähig, wenn mehr als die Hälfte der Mit
 % VORSTAND
 %
 
-\chapter{Vorstand}
+\jursection{Vorstand}
 
 \Paragraph{title=Aufgaben}
 
@@ -282,7 +281,7 @@ Ist das Chancengleichheitsreferat durch einen Mann besetzt, muss eine Frau zur U
 % ERWEITERTER VORSTAND
 %
 
-\chapter{Erweiterter Vorstand}
+\jursection{Erweiterter Vorstand}
 
 \Paragraph{title=Aufgaben}\label{erweitertervorstand:aufgaben}
 Der erweiterte Vorstand unterstützt den Vorstand bei seiner Arbeit. Er ist diesem rechenschaftspflichtig.
@@ -305,7 +304,7 @@ Die Mitglieder des erweiterten Vorstands scheiden aus
 % ÄLTESTENRAT
 %
 
-\chapter{Ältestenrat}\label{aera}
+\jursection{Ältestenrat}
 
 \Paragraph{title=Aufgaben}\label{aera:aufgaben}
 
@@ -370,7 +369,7 @@ Erhält der Ältestenrat den Antrag auf Wiederanerkennung eines Sitzes im Studie
 % FACHSCHAFTEN
 %
 
-\chapter{Fachschaften}
+\jursection{Fachschaften}
 
 \Paragraph{title=Aufgaben} \label{fachschaften:aufgaben}
 
@@ -445,7 +444,7 @@ Die Fachschaftsversammlung kann mit 10~\% aller Stimmen und Zweidrittel der abge
 % FACHSCHAFTENKONFERENZ (FSK)
 %
 
-\chapter{Fachschaftenkonferenz}\label{fsk}
+\jursection{Fachschaftenkonferenz}
 
 \Paragraph{title=Aufgaben} \label{fsk:aufgaben}
 
@@ -497,7 +496,7 @@ Die Fachschaftenkonferenz tagt mindestens einmal pro Vorlesungsmonat.
 % ARBEITSKREISE UND HOCHSCHULGRUPPEN
 %
 
-\chapter{Arbeitskreise und Hochschulgruppen}
+\jursection{Arbeitskreise und Hochschulgruppen}
 
 \Paragraph{title=Arbeitskreise}
 Zur langfristigen Bearbeitung konkreter Aufgaben oder Teile der Aufgaben nach \ref{studierendenschaft:aufgaben} kann das Studierendenparlament Arbeitskreise der Studierendenschaft einrichten. Diese sind dem Studierendenparlament weisungsgebunden und berichten diesem regelmäßig über ihre Arbeit.
@@ -509,7 +508,7 @@ Studentische Gruppen haben die Möglichkeit, sich als Hochschulgruppe der Studie
 % HAUSHALT
 %
 
-\chapter{Haushalt}
+\jursection{Haushalt}
 
 \Paragraph{title=Allgemeines}
 
@@ -548,7 +547,7 @@ Der  Finanzausschuss besteht aus drei durch das Studierendenparlament und  zwei 
 % GRUNDSÄTZE
 %
 
-\chapter{Grundsätze und Organisatorisches}
+\jursection{Grundsätze und Organisatorisches}
 
 \Paragraph{title=Wahlen und Abstimmungen}\label{grundsaetze:wahlen}
 
