Benutze lateinische Großbuchstaben für die section-Nummern

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -32,7 +32,7 @@
 	margin=2.54cm
 }
 
-\renewcommand{\thesection}{\alph{section})}
+\renewcommand{\thesection}{\Alph{section}}
 
 % Setze einen kleinen Abstand \, zwischen Zahl und Buchstabe bei Paragraphen
 \renewcommand*{\thecontractSubParagraph}{%
