--- a/gesamt.tex
+++ b/gesamt.tex
@@ -118,18 +118,20 @@ Im Folgenden wird aus Gründen der besseren Lesbarkeit ausschließlich die weibl
 \input{uebergangsbestimmungen.core.tex}
 \end{multicols}
 
-%\fbox{
-%\begin{tabular}{ll}
-%Impressum & \\
-%\small Herausgeber: & UStA KIT \\
-%Tel.: & 0721/608-48460 \\
-%Web: & www.usta.de \\
-%E-Mail: & info$@$usta.de\\
-%V.i.S.d.P. & Philipp Rudo\\
-%Druck: & Studierenden Service \\
-%& Verein (SSV)\\
-%Auflage: & 300 Exemplare
-%\end{tabular}
-%}
+
+%%% Impressum %%%
+\vspace*{\fill}
+\section*{Impressum}
+\begin{tabular}{rl}
+	Herausgeber & AStA am KIT \\
+	Telefon & 0721/608-48460 \\
+	Web & www.asta-kit.de \\
+	E-Mail & info@usta.de\\
+	V.i.S.d.P. & Vera Schumacher\\
+	Druck & Studierenden Service Verein (SSV)\\
+	Nachdruck & 150 Exemplare\\
+	Stand: & 11.02.2013 (Veröffentlichungsdatum in den\\
+& amtlichen Bekanntmachungen des KIT)
+\end{tabular}
 
 \end{document}
