Benutze KOMAscript-eigene Mechanismen für die Satzspiegeloptimierung

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -1,4 +1,12 @@
-\documentclass[a4paper,parskip=half,numbers=noenddot,titlepage,twoside]{scrartcl}
+\documentclass[
+	a4paper,
+	parskip=half,
+	numbers=noenddot,
+	titlepage,
+	twoside,
+	BCOR=2mm,
+	DIV=12,
+]{scrartcl}
 
 \synctex=1
 
@@ -26,13 +34,6 @@
 \usepackage{multicol}
 % Setze Abstand zwischen Spalten
 \setlength{\columnsep}{5mm}
-
-\usepackage{geometry}
-%\geometry{left=26mm, right=25mm, top=23mm, bottom=33mm}
-\geometry{
-	includeheadfoot,
-	margin=2.54cm
-}
 
 % Setze Titel des Dokuments und Abschnitt (wenn vorhanden) als Kopfzeile
 \usepackage{scrlayer-scrpage}
