Optimiere für Bildschirmdarstellung

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -3,8 +3,8 @@
 	parskip=half,
 	numbers=noenddot,
 	titlepage,
-	twoside,
-	BCOR=2mm,
+%	twoside,  % Benutze diese Optionen für Booklet-Layout
+%	BCOR=2mm, % Auskommentiert für bessere Bildschirmdarstellung
 	DIV=12,
 ]{scrartcl}
 
@@ -126,8 +126,8 @@ Im Folgenden wird aus Gründen der besseren Lesbarkeit ausschließlich die weibl
 \begin{tabular}{rl}
 	Herausgeber & AStA am KIT \\
 	Telefon & 0721/608-48460 \\
-	Web & www.asta-kit.de \\
-	E-Mail & info@usta.de\\
+	Web & \url{www.asta-kit.de} \\
+	E-Mail & \href{mailto:info@usta.de}{info@usta.de}\\
 	V.i.S.d.P. & Vera Schumacher\\
 	Druck & Studierenden Service Verein (SSV)\\
 	Nachdruck & 150 Exemplare\\
