Verschiebe Unterdokumente in eigene Ordner
(damit man eine Version bauen kann, die nur diese enthält)

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -102,21 +102,21 @@ Im Folgenden wird aus Gründen der besseren Lesbarkeit ausschließlich die weibl
 \part[Organisationssatzung]{Organisationssatzung \\ der Verfassten Studierendenschaft \\ des Karlsruher Instituts für Technologie (KIT)}
 
 \begin{multicols}{2}
-\input{vs-satzung.core.tex}
+\input{vs-satzung/document.core.tex}
 \end{multicols}
 
 
 \part[Wahl- und Abstimmungsordnung]{Wahl- und Abstimmungsordnung \\ der Verfassten Studierendenschaft \\ des Karlsruher Instituts für Technologie (KIT)}
 
 \begin{multicols}{2}
-\input{wahl-abstimmungsordnung.core.tex}
+\input{wahl-abstimmungsordnung/document.core.tex}
 \end{multicols}
 
 
 \part{Übergangsbestimmungen}
 
 \begin{multicols}{2}
-\input{uebergangsbestimmungen.core.tex}
+\input{vs-uebergangsbestimmungen/document.core.tex}
 \end{multicols}
 
 
